<?xml version="1.0" encoding="utf-8"?>
<resources xmlns:tools="http://schemas.android.com/tools" tools:ignore="MissingTranslation">


    <!-- Messages IDs -->
    <item name="auto_focus" type="id"/>
    <item name="decode" type="id"/>
    <item name="decode_failed" type="id"/>
    <item name="decode_succeeded" type="id"/>
    <item name="launch_product_query" type="id"/>
    <item name="quit" type="id"/>
    <item name="restart_preview" type="id"/>
    <item name="return_scan_result" type="id"/>
    <!--<string name="app_name">测试版</string>-->
    <string name="order_pay">支付订单</string>

    <string name="scan_text">请将条码放到方框以内,便于快速扫描</string>

    <string name="TypeCriteriaException">无法获取有效定位依据导致定位失败，请允许手机获取定位权限</string>
    <!-- 时间 -->
    <string name="date_format_hhmm">HH:mm</string>
    <string name="date_format_mmdd">M月d日</string>
    <string name="date_format_mmddhhmm">M月d日 HH:mm</string>
    <string name="date_format_MMddHHmmssSSS">MM-dd HH:mm:ss.SSS</string>
    <string name="date_format_yyyymmdd">yyyy年M月d日</string>
    <string name="date_format_yyyymmdd2">yyyy-MM-dd</string>
    <string name="date_format_yyyymmdd3">yyyy.MM.dd</string>
    <string name="date_format_yyyymmdd4">yyyyMMdd</string>
    <string name="date_format_yyyymmdd5">yyyy-MM-dd HH:mm</string>
    <string name="date_format_yyyymmddhhmm">yyyy-M-d  HH:mm</string>
    <string name="date_format_yyyymmddhhmm2">yyyy年M月d日  HH:mm</string>
    <string name="date_format_yyyymmddhhmmss">yyyy-MM-dd HH:mm:ss</string>


    <string name="mapbar_prompt">提示</string>
    <string name="des_image">豆米</string>
    <string name="txt_str_yes">是</string>
    <string name="txt_str_no">否</string>
    <string name="txt_str_determine">确定</string>


    <string name="toast_picutil_error">没有找到SD卡或者正在使用请关闭usb连接模式</string>
    <string name="cancel">取消</string>


    <!--title文字-->
    <string name="text_locationAddress_collectionBusiness">定位地址</string>


    <string name="text_no_data_gdoosCategory">没有相关数据</string>

    <!-- 订单详情相关-->
    <string name="title_activity_webview">广告</string>
    <!--分享內容表題  -->
    <string name="share">智惠返</string>

    <!--充值  -->


    <string name="payment_hint">支付</string>
    <string name="release_to_load">上拉加载</string>
    <string name="loading">正在加载</string>
    <string name="pull_to_load">放开以刷新</string>
    <string name="base_default_loading">努力加载中&#8230;</string>


    <!--v2-->
    <string name="app_name">智惠返</string>
    <string name="title_home">首页</string>
    <string name="title_alliance">附近</string>
    <string name="title_mine">我</string>


    <string name="system_exit">再按一次退出软件！</string>
    <string name="login">登陆</string>
    <string name="register">注册</string>
    <string name="phone_num">手机号码</string>
    <string name="hint_phone_num">请输入注册时您的手机号码</string>
    <string name="hint_pwd">请输入您的密码</string>
    <string name="forget_pwd">忘记密码?</string>
    <string name="yan">验证码</string>
    <string name="hint_yan">请输入短信验证码</string>
    <string name="hint_reg_pwd">请输入您的密码</string>
    <string name="yaoqing">邀请码</string>
    <string name="hint_yao">请输入您的邀请码(选填)</string>
    <string name="hint_pro_content">我已阅读并同意用户协议</string>

    <string name="titlt_repwd">重置密码</string>
    <string name="bind">确认绑定</string>
    <string name="hint_repwd">请输入您的新密码，不少于6位</string>
    <string name="hint_phone">请输入手机号</string>

    <string name="home_scan">付款</string>
    <string name="home_count">智惠钱包</string>
    <string name="home_money">推广收益</string>
    <string name="home_history">浏览记录</string>
    <string name="home_benifit">关注</string>

    <string name="home_supermarker">代理入口</string>
    <string name="hint_home_supermaket">合伙，轻松赚钱</string>
    <string name="home_gate">商户入口</string>
    <string name="hint_home_gate">随时，轻松赚钱</string>
    <string name="hot_bussiness">热门商户</string>
    <string name="recomment">推荐商家</string>
    <string name="more">更多</string>

    <string name="title_settingpwd">设置密码</string>
    <string name="title_orderlist">订单管理</string>

    <string name="shop">我是商户</string>


    <string name="yuyue_shop">预约商户</string>
    <string name="agent">我是代理</string>
    <string name="produceshop">成为联盟商户</string>
    <string name="shenqing">申请</string>
    <string name="sure_submit">确认提交</string>
    <string name="hint_name">请输入您的真实姓名（必填）</string>
    <string name="hint_shopname">请输入您的店名（必填）</string>
    <string name="hint_shopaddr">请输入您的店铺地址（必填）</string>
    <string name="hint_invation">请输入社区代理电话号码（选填）</string>
    <string name="hint_email">请输入您的联系人邮箱（必填）</string>
    <string name="hint_servicephone">请输入您的客服电话（必填）</string>
    <string name="hint_shopnickname">请输入您的店铺简称（必填）</string>
    <string name="hint_businessLicense">请输入您的营业执照编号（选填）</string>
    <string name="hint_cardNo">请输入您的银行卡号（选填）</string>
    <string name="hint_shopphone">请输入您的手机号（必填）</string>
    <string name="hint_idcard">请输入您的身份证号（必填）</string>
    <string name="hint_location">定位地址（必填）</string>

    <string name="hint_categoiory">请选择您的经营范围（必填）</string>
    <string name="hint_contactType">请选择您的联系人类型（必填）</string>
    <string name="hint_addressType">请选择您的地址类型（必填）</string>
    <string name="hint_shopreturnrate">请选择消费返币比例（选填）</string>
    <string name="hint_businessLicenseType">请选择营业执照类型（选填）</string>
    <string name="hint_cardName">请选择银行卡持卡人姓名（选填）</string>

    <string name="submit_idcard">请上传您的身份证照片（选填）</string>
    <string name="submit_salecard">请上传您的营业执照照片（选填）</string>
    <string name="submit_others">请上传您的店铺首页图（必填）</string>

    <string name="favorite">店铺关注</string>
    <string name="setting">设置</string>
    <string name="count_info">账户信息</string>

    <string name="shop_manage">店铺管理</string>
    <string name="order_manage">订单管理</string>
    <string name="cache">收银台</string>
    <string name="myvip">我的会员</string>
    <string name="mytg">我的推广</string>
    <string name="share_">邀请注册</string>
    <string name="shareshop">分享</string>
    <string name="zhaoshang">招商加盟</string>
    <string name="nyyhk">我的银行卡</string>
    <string name="symx">收益明细</string>
    <string name="add_bank">添加银行卡</string>
    <string name="benefit_info">收益详情</string>
    <string name="change_tong_pwd">设置交易密码</string>
    <string name="confirm_tong">确认交易密码</string>
    <string name="input_yan">输入验证码</string>
    <string name="title_yaoqing">邀请注册</string>

    <string name="myshop">我的商户</string>
    <string name="mingxi">收益明细</string>
    <string name="postal_history">提现记录</string>

    <string name="pingjia">评价</string>
    <string name="city">城市列表</string>
    <string name="postal_count">现金账户</string>
    <string name="edit_shopinfo">商家介绍</string>
    <string name="edit_shopimg">图片上传</string>
    <string name="postal2">提现</string>
    <string name="pre_dai">申请成为代理</string>
    <string name="bindtitle">手机号验证</string>
    <string name="title_paysuccess">支付成功</string>

    <!--update-->
    <string name="android_auto_update_notify_ticker">发现新版本,点击进行升级</string>
    <string name="android_auto_update_notify_content">发现新版本,点击进行升级</string>
    <string name="android_auto_update_download_progress">正在下载:%1$d%%</string>

</resources>