<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
                android:layout_width="match_parent"
                android:layout_height="match_parent">


    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:layout_alignParentTop="true">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_marginBottom="@dimen/x40"
            android:orientation="vertical">


            <View
                android:layout_width="match_parent"
                android:layout_height="@dimen/x1"
                android:background="@color/line_color"/>

            <EditText
                android:id="@+id/et_name"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@null"
                android:hint="@string/hint_name"
                android:padding="@dimen/x12"
                android:textColorHint="#D9D9DB"
                android:textSize="@dimen/x12"
                />

            <View
                android:layout_width="match_parent"
                android:layout_height="@dimen/x1"
                android:background="@color/line_color"/>

            <EditText
                android:id="@+id/et_cdcard"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@null"
                android:hint="@string/hint_idcard"
                android:padding="@dimen/x12"
                android:textColorHint="#D9D9DB"
                android:textSize="@dimen/x12"/>

            <View
                android:layout_width="match_parent"
                android:layout_height="@dimen/x1"
                android:background="@color/line_color"/>

            <EditText
                android:id="@+id/et_shopname"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@null"
                android:hint="@string/hint_shopname"
                android:padding="@dimen/x12"
                android:textColorHint="#D9D9DB"
                android:textSize="@dimen/x12"
                />

            <View
                android:layout_width="match_parent"
                android:layout_height="@dimen/x1"
                android:background="@color/line_color"/>

            <EditText
                android:id="@+id/et_shopphone"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@null"
                android:hint="@string/hint_shopphone"
                android:padding="@dimen/x12"
                android:textColorHint="#D9D9DB"
                android:textSize="@dimen/x12"/>

            <View
                android:layout_width="match_parent"
                android:layout_height="@dimen/x1"
                android:background="@color/line_color"/>


            <EditText
                android:id="@+id/et_shopaddr"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@null"
                android:hint="@string/hint_shopaddr"
                android:padding="@dimen/x12"
                android:textColorHint="#D9D9DB"
                android:textSize="@dimen/x12"/>

            <View
                android:layout_width="match_parent"
                android:layout_height="@dimen/x1"
                android:background="@color/line_color"/>

            <EditText
                android:id="@+id/et_invation"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@null"
                android:hint="@string/hint_invation"
                android:padding="@dimen/x12"
                android:textColorHint="#D9D9DB"
                android:textSize="@dimen/x12"/>

            <View
                android:layout_width="match_parent"
                android:layout_height="@dimen/x1"
                android:background="@color/line_color"/>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:padding="@dimen/x12"
                    android:text="@string/hint_location"
                    android:textColor="#D9D9DB"
                    android:textSize="@dimen/x11"/>

                <TextView
                    android:id="@+id/tv_juti_addr"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:background="@null"
                    android:drawableRight="@mipmap/arrow"
                    android:gravity="center_vertical|right"
                    android:padding="@dimen/x12"
                    android:textColor="#A8A8A8"
                    android:textColorHint="#aaa"
                    android:textSize="@dimen/x11"/>

            </LinearLayout>

            <View
                android:layout_width="match_parent"
                android:layout_height="@dimen/x1"
                android:background="@color/line_color"/>

            <TextView
                android:id="@+id/tv_category"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:drawableRight="@mipmap/arrow"
                android:hint="@string/hint_categoiory"
                android:padding="@dimen/x12"
                android:textColorHint="#D9D9DB"
                android:textSize="@dimen/x12"/>


            <View
                android:layout_width="match_parent"
                android:layout_height="@dimen/x1"
                android:layout_marginLeft="@dimen/x12"
                android:layout_marginRight="@dimen/x12"
                android:background="#eee"/>

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:padding="@dimen/x12"
                android:text="@string/submit_idcard"
                android:textColor="#5A5B5A"
                android:textSize="@dimen/x12"/>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal">

                <LinearLayout
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:orientation="vertical">

                    <ImageView
                        android:id="@+id/iv_zheng"
                        android:layout_width="@dimen/x60"
                        android:layout_height="@dimen/x60"
                        android:layout_margin="@dimen/x12"
                        android:background="@mipmap/upload_sfz"/>

                    <TextView
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_margin="@dimen/x4"
                        android:gravity="center"
                        android:text="身份证正面"
                        android:textSize="@dimen/x10"/>
                </LinearLayout>

                <LinearLayout
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:orientation="vertical">

                    <ImageView
                        android:id="@+id/iv_fan"
                        android:layout_width="@dimen/x60"
                        android:layout_height="@dimen/x60"
                        android:layout_margin="@dimen/x12"
                        android:background="@mipmap/upload_sfz"/>

                    <TextView
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_margin="@dimen/x4"
                        android:gravity="center"
                        android:text="身份证反面"
                        android:textSize="@dimen/x10"/>


                </LinearLayout>


            </LinearLayout>

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:padding="@dimen/x12"
                android:text="@string/submit_salecard"
                android:textColor="#5A5B5A"
                android:textSize="@dimen/x12"
                />

            <ImageView
                android:id="@+id/tv_yingye"
                android:layout_width="match_parent"
                android:layout_height="@dimen/x120"
                android:layout_margin="@dimen/x12"
                android:background="@mipmap/upload_sfz"
                android:scaleType="fitCenter"/>

            <TextView

                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:padding="@dimen/x12"
                android:text="@string/submit_others"
                android:textColor="#5A5B5A"
                />

            <ImageView
                android:id="@+id/tv_other"
                android:layout_width="match_parent"
                android:layout_height="@dimen/x120"
                android:layout_margin="@dimen/x12"
                android:background="@mipmap/upload_sfz"
                android:scaleType="fitCenter"/>


        </LinearLayout>

    </ScrollView>

    <TextView
        android:id="@+id/tv_sure"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:background="@color/colorPrimary"
        android:gravity="center"
        android:padding="@dimen/x8"
        android:text="@string/sure_submit"
        android:textColor="@color/white"
        android:textSize="@dimen/x14"/>
</RelativeLayout>
