<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
              xmlns:app="http://schemas.android.com/apk/res-auto"
              android:orientation="vertical"
              android:layout_width="match_parent"
              android:layout_height="match_parent"
              android:focusable="true"
              android:focusableInTouchMode="true">

    <android.support.v7.widget.Toolbar
        android:id="@+id/toolbar"
        android:layout_width="match_parent"
        style="@style/title_height"
        android:background="@color/colorPrimary"
        app:contentInsetStart="0dp"/>


    <com.handmark.pulltorefresh.library.PullToRefreshScrollView
        android:id="@+id/sv_pull"
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <LinearLayout

            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical">

            <LinearLayout
                android:id="@+id/linear1"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@color/colorPrimary"
                android:orientation="horizontal">

                <TextView
                    android:id="@+id/tv_scan"
                    style="@style/style_home_tab"
                    android:drawableTop="@mipmap/pay"
                    android:text="@string/home_scan"
                    />

                <TextView
                    android:id="@+id/tv_count"
                    style="@style/style_home_tab"
                    android:drawableTop="@mipmap/count"
                    android:text="@string/home_count"
                    />

                <TextView
                    android:id="@+id/tv_history"
                    style="@style/style_home_tab"
                    android:drawableTop="@mipmap/history"
                    android:text="@string/home_history"
                    />

                <TextView
                    android:id="@+id/tv_benifit"
                    style="@style/style_home_tab"
                    android:drawableTop="@mipmap/gz"
                    android:text="@string/home_benifit"
                    />
            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal">

                <ImageView
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:layout_weight="2"
                    android:src="@mipmap/market"/>

                <LinearLayout
                    android:id="@+id/line_market"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_margin="@dimen/x8"
                    android:layout_weight="1"
                    android:gravity="center_vertical"
                    android:orientation="vertical">

                    <TextView
                        android:id="@+id/tv_market"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/home_supermarker"
                        android:textSize="@dimen/textsise_small_"/>

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/hint_home_supermaket"
                        android:textColor="#A9AAAA"
                        android:textSize="@dimen/textsize_10"/>

                </LinearLayout>

                <View
                    android:layout_width="@dimen/x1"
                    android:layout_marginTop="@dimen/x4"
                    android:layout_marginBottom="@dimen/x4"
                    android:layout_height="match_parent"
                    android:background="@color/bg_line"/>

                <ImageView
                    android:id="@+id/iv_shop"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:layout_weight="2"
                    android:src="@mipmap/shop"/>

                <LinearLayout
                    android:id="@+id/line_shop"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_margin="@dimen/x8"
                    android:layout_weight="1"
                    android:orientation="vertical">

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:gravity="center"
                        android:text="@string/home_gate"
                        android:textSize="@dimen/textsise_small_"/>

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/hint_home_gate"
                        android:textColor="#A9AAAA"
                        android:textSize="@dimen/textsize_10"/>

                </LinearLayout>


            </LinearLayout>

            <View
                android:background="#eee"
                android:layout_width="match_parent"
                android:layout_height="@dimen/x10"
                />

            <LinearLayout
                android:id="@+id/ll_recommand"
                android:layout_marginTop="@dimen/x8"
                android:layout_marginBottom="@dimen/x8"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:paddingLeft="@dimen/x12"
                android:paddingRight="@dimen/x12">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:drawableLeft="@mipmap/crown"
                    android:drawablePadding="@dimen/x8"
                    android:text="@string/recomment"
                    android:textColor="#FEAE59"
                    android:textSize="@dimen/textsise_small"/>

                <View
                    android:layout_width="0dp"
                    android:layout_height="match_parent"
                    android:layout_weight="1"/>

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:drawablePadding="@dimen/x8"
                    android:drawableRight="@mipmap/arrow"
                    android:text="@string/more"
                    android:textColor="#A9AAAA"
                    android:textSize="@dimen/textsise_ssmall"/>


            </LinearLayout>

            <View
                android:background="#E4E4E4"
                android:layout_width="match_parent"
                android:layout_height="@dimen/x1"/>

            <com.youyou.xiaofeibao.view.AutoHeightListView
                android:id="@+id/recommand_listview"
                android:layout_width="match_parent"
                android:layout_height="match_parent"/>

            <View
                android:background="#eee"
                android:layout_width="match_parent"
                android:layout_height="@dimen/x10"/>

            <com.youyou.xiaofeibao.version2.banner.BannerView
                android:id="@+id/banner_1"
                android:layout_width="match_parent"
                android:layout_height="@dimen/y80"/>

            <View
                android:background="#eee"
                android:layout_width="match_parent"
                android:layout_height="@dimen/x10"/>

            <LinearLayout
                android:id="@+id/ll_hot"
                android:layout_marginTop="@dimen/x10"
                android:layout_marginBottom="@dimen/x10"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:paddingLeft="@dimen/x12"
                android:paddingRight="@dimen/x12">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:drawableLeft="@mipmap/hot_shop"
                    android:drawablePadding="@dimen/x8"
                    android:text="@string/hot_bussiness"
                    android:textColor="#12C3B3"
                    android:textSize="@dimen/textsise_small"/>

                <View
                    android:layout_width="0dp"
                    android:layout_height="match_parent"
                    android:layout_weight="1"/>

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:drawablePadding="@dimen/x8"
                    android:drawableRight="@mipmap/arrow"
                    android:text="@string/more"
                    android:textColor="#A9AAAA"
                    android:textSize="@dimen/textsise_ssmall"/>


            </LinearLayout>

            <View
                android:background="#E4E4E4"
                android:layout_width="match_parent"
                android:layout_height="@dimen/x1"/>

            <com.youyou.xiaofeibao.view.AutoHeightListView
                android:id="@+id/hot_listview"
                android:layout_width="match_parent"
                android:layout_height="match_parent"/>

        </LinearLayout>

    </com.handmark.pulltorefresh.library.PullToRefreshScrollView>


</LinearLayout>
